qt-restricted-extras/qscintilla/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QsciScintilla QsciScintilla;
void QsciScintilla_markerDeleteAll1(QsciScintilla* self, int markerNumber);
void QsciScintilla_setIndicatorDrawUnder2(QsciScintilla* self, bool under, int indicatorNumber);
void QsciScintilla_setIndicatorForegroundColor2(QsciScintilla* self, QColor* col, int indicatorNumber);
void QsciScintilla_setIndicatorHoverForegroundColor2(QsciScintilla* self, QColor* col, int indicatorNumber);
void QsciScintilla_setIndicatorHoverStyle2(QsciScintilla* self, int style, int indicatorNumber);
void QsciScintilla_setIndicatorOutlineColor2(QsciScintilla* self, QColor* col, int indicatorNumber);
void QsciScintilla_clearMarginText1(QsciScintilla* self, int line);
void QsciScintilla_setMarkerBackgroundColor2(QsciScintilla* self, QColor* col, int markerNumber);
void QsciScintilla_setMarkerForegroundColor2(QsciScintilla* self, QColor* col, int markerNumber);
void QsciScintilla_setWrapVisualFlags2(QsciScintilla* self, int endFlag, int startFlag);
void QsciScintilla_setWrapVisualFlags3(QsciScintilla* self, int endFlag, int startFlag, int indent);