qt-restricted-extras/qscintilla/gen_qsciscintilla.nim

proc fcQsciScintilla_markerDeleteAll1(self: pointer, markerNumber: cint): void {.importc: "QsciScintilla_markerDeleteAll1".}
proc fcQsciScintilla_setIndicatorDrawUnder2(self: pointer, under: bool, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorDrawUnder2".}
proc fcQsciScintilla_setIndicatorForegroundColor2(self: pointer, col: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorForegroundColor2".}
proc fcQsciScintilla_setIndicatorHoverForegroundColor2(self: pointer, col: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorHoverForegroundColor2".}
proc fcQsciScintilla_setIndicatorHoverStyle2(self: pointer, style: cint, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorHoverStyle2".}
proc fcQsciScintilla_setIndicatorOutlineColor2(self: pointer, col: pointer, indicatorNumber: cint): void {.importc: "QsciScintilla_setIndicatorOutlineColor2".}
proc fcQsciScintilla_clearMarginText1(self: pointer, line: cint): void {.importc: "QsciScintilla_clearMarginText1".}
proc fcQsciScintilla_setMarkerBackgroundColor2(self: pointer, col: pointer, markerNumber: cint): void {.importc: "QsciScintilla_setMarkerBackgroundColor2".}
proc fcQsciScintilla_setMarkerForegroundColor2(self: pointer, col: pointer, markerNumber: cint): void {.importc: "QsciScintilla_setMarkerForegroundColor2".}
proc fcQsciScintilla_setWrapVisualFlags2(self: pointer, endFlag: cint, startFlag: cint): void {.importc: "QsciScintilla_setWrapVisualFlags2".}
proc fcQsciScintilla_setWrapVisualFlags3(self: pointer, endFlag: cint, startFlag: cint, indent: cint): void {.importc: "QsciScintilla_setWrapVisualFlags3".}
type cQsciScintillaVTable = object
  destructor*: proc(vtbl: ptr cQsciScintillaVTable, self: ptr cQsciScintilla) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  apiContext*: proc(vtbl, self: pointer, pos: cint, context_start: ptr cint, last_word_start: ptr cint): struct_miqt_array {.cdecl, raises: [], gcsafe.}
  findFirst*: proc(vtbl, self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, wrap: bool, forward: bool, line: cint, index: cint, show: bool, posix: bool, cxx11: bool): bool {.cdecl, raises: [], gcsafe.}
  findFirstInSelection*: proc(vtbl, self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, forward: bool, show: bool, posix: bool, cxx11: bool): bool {.cdecl, raises: [], gcsafe.}
  findNext*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
  recolor*: proc(vtbl, self: pointer, start: cint, endVal: cint): void {.cdecl, raises: [], gcsafe.}
  replace*: proc(vtbl, self: pointer, replaceStr: struct_miqt_string): void {.cdecl, raises: [], gcsafe.}
  append*: proc(vtbl, self: pointer, text: struct_miqt_string): void {.cdecl, raises: [], gcsafe.}
  autoCompleteFromAll*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  autoCompleteFromAPIs*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  autoCompleteFromDocument*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  callTip*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  clear*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  copy*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  cut*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  ensureCursorVisible*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  ensureLineVisible*: proc(vtbl, self: pointer, line: cint): void {.cdecl, raises: [], gcsafe.}
  foldAll*: proc(vtbl, self: pointer, children: bool): void {.cdecl, raises: [], gcsafe.}
  foldLine*: proc(vtbl, self: pointer, line: cint): void {.cdecl, raises: [], gcsafe.}
  indent*: proc(vtbl, self: pointer, line: cint): void {.cdecl, raises: [], gcsafe.}
  insert*: proc(vtbl, self: pointer, text: struct_miqt_string): void {.cdecl, raises: [], gcsafe.}
  insertAt*: proc(vtbl, self: pointer, text: struct_miqt_string, line: cint, index: cint): void {.cdecl, raises: [], gcsafe.}
  moveToMatchingBrace*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  paste*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  redo*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  removeSelectedText*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  replaceSelectedText*: proc(vtbl, self: pointer, text: struct_miqt_string): void {.cdecl, raises: [], gcsafe.}
  resetSelectionBackgroundColor*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  resetSelectionForegroundColor*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  selectAll*: proc(vtbl, self: pointer, select: bool): void {.cdecl, raises: [], gcsafe.}
  selectToMatchingBrace*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  setAutoCompletionCaseSensitivity*: proc(vtbl, self: pointer, cs: bool): void {.cdecl, raises: [], gcsafe.}
  setAutoCompletionReplaceWord*: proc(vtbl, self: pointer, replace: bool): void {.cdecl, raises: [], gcsafe.}
  setAutoCompletionShowSingle*: proc(vtbl, self: pointer, single: bool): void {.cdecl, raises: [], gcsafe.}
  setAutoCompletionSource*: proc(vtbl, self: pointer, source: cint): void {.cdecl, raises: [], gcsafe.}
  setAutoCompletionThreshold*: proc(vtbl, self: pointer, thresh: cint): void {.cdecl, raises: [], gcsafe.}
  setAutoCompletionUseSingle*: proc(vtbl, self: pointer, single: cint): void {.cdecl, raises: [], gcsafe.}
  setAutoIndent*: proc(vtbl, self: pointer, autoindent: bool): void {.cdecl, raises: [], gcsafe.}
  setBraceMatching*: proc(vtbl, self: pointer, bm: cint): void {.cdecl, raises: [], gcsafe.}
  setBackspaceUnindents*: proc(vtbl, self: pointer, unindent: bool): void {.cdecl, raises: [], gcsafe.}
  setCaretForegroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setCaretLineBackgroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setCaretLineFrameWidth*: proc(vtbl, self: pointer, width: cint): void {.cdecl, raises: [], gcsafe.}
  setCaretLineVisible*: proc(vtbl, self: pointer, enable: bool): void {.cdecl, raises: [], gcsafe.}
  setCaretWidth*: proc(vtbl, self: pointer, width: cint): void {.cdecl, raises: [], gcsafe.}
  setColor*: proc(vtbl, self: pointer, c: pointer): void {.cdecl, raises: [], gcsafe.}
  setCursorPosition*: proc(vtbl, self: pointer, line: cint, index: cint): void {.cdecl, raises: [], gcsafe.}
  setEolMode*: proc(vtbl, self: pointer, mode: cint): void {.cdecl, raises: [], gcsafe.}
  setEolVisibility*: proc(vtbl, self: pointer, visible: bool): void {.cdecl, raises: [], gcsafe.}
  setFolding*: proc(vtbl, self: pointer, fold: cint, margin: cint): void {.cdecl, raises: [], gcsafe.}
  setIndentation*: proc(vtbl, self: pointer, line: cint, indentation: cint): void {.cdecl, raises: [], gcsafe.}
  setIndentationGuides*: proc(vtbl, self: pointer, enable: bool): void {.cdecl, raises: [], gcsafe.}
  setIndentationGuidesBackgroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setIndentationGuidesForegroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setIndentationsUseTabs*: proc(vtbl, self: pointer, tabs: bool): void {.cdecl, raises: [], gcsafe.}
  setIndentationWidth*: proc(vtbl, self: pointer, width: cint): void {.cdecl, raises: [], gcsafe.}
  setLexer*: proc(vtbl, self: pointer, lexer: pointer): void {.cdecl, raises: [], gcsafe.}
  setMarginsBackgroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setMarginsFont*: proc(vtbl, self: pointer, f: pointer): void {.cdecl, raises: [], gcsafe.}
  setMarginsForegroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setMarginLineNumbers*: proc(vtbl, self: pointer, margin: cint, lnrs: bool): void {.cdecl, raises: [], gcsafe.}
  setMarginMarkerMask*: proc(vtbl, self: pointer, margin: cint, mask: cint): void {.cdecl, raises: [], gcsafe.}
  setMarginSensitivity*: proc(vtbl, self: pointer, margin: cint, sens: bool): void {.cdecl, raises: [], gcsafe.}
  setMarginWidth*: proc(vtbl, self: pointer, margin: cint, width: cint): void {.cdecl, raises: [], gcsafe.}
  setMarginWidth*: proc(vtbl, self: pointer, margin: cint, s: struct_miqt_string): void {.cdecl, raises: [], gcsafe.}
  setModified*: proc(vtbl, self: pointer, m: bool): void {.cdecl, raises: [], gcsafe.}
  setPaper*: proc(vtbl, self: pointer, c: pointer): void {.cdecl, raises: [], gcsafe.}
  setReadOnly*: proc(vtbl, self: pointer, ro: bool): void {.cdecl, raises: [], gcsafe.}
  setSelection*: proc(vtbl, self: pointer, lineFrom: cint, indexFrom: cint, lineTo: cint, indexTo: cint): void {.cdecl, raises: [], gcsafe.}
  setSelectionBackgroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setSelectionForegroundColor*: proc(vtbl, self: pointer, col: pointer): void {.cdecl, raises: [], gcsafe.}
  setTabIndents*: proc(vtbl, self: pointer, indent: bool): void {.cdecl, raises: [], gcsafe.}
  setTabWidth*: proc(vtbl, self: pointer, width: cint): void {.cdecl, raises: [], gcsafe.}
  setText*: proc(vtbl, self: pointer, text: struct_miqt_string): void {.cdecl, raises: [], gcsafe.}
  setUtf8*: proc(vtbl, self: pointer, cp: bool): void {.cdecl, raises: [], gcsafe.}
  setWhitespaceVisibility*: proc(vtbl, self: pointer, mode: cint): void {.cdecl, raises: [], gcsafe.}
  setWrapMode*: proc(vtbl, self: pointer, mode: cint): void {.cdecl, raises: [], gcsafe.}
  undo*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  unindent*: proc(vtbl, self: pointer, line: cint): void {.cdecl, raises: [], gcsafe.}
  zoomIn*: proc(vtbl, self: pointer, range: cint): void {.cdecl, raises: [], gcsafe.}
  zoomIn*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  zoomOut*: proc(vtbl, self: pointer, range: cint): void {.cdecl, raises: [], gcsafe.}
  zoomOut*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  zoomTo*: proc(vtbl, self: pointer, size: cint): void {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, e: pointer): bool {.cdecl, raises: [], gcsafe.}
  changeEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  contextMenuEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  wheelEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  canInsertFromMimeData*: proc(vtbl, self: pointer, source: pointer): bool {.cdecl, raises: [], gcsafe.}
  fromMimeData*: proc(vtbl, self: pointer, source: pointer, rectangular: ptr bool): struct_miqt_string {.cdecl, raises: [], gcsafe.}
  toMimeData*: proc(vtbl, self: pointer, text: struct_miqt_string, rectangular: bool): pointer {.cdecl, raises: [], gcsafe.}
  dragEnterEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  dragLeaveEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  dragMoveEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  dropEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  focusInEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  focusOutEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  focusNextPrevChild*: proc(vtbl, self: pointer, next: bool): bool {.cdecl, raises: [], gcsafe.}
  keyPressEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  inputMethodEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
